--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,5 +4,6 @@
     "Trending": "Trending",
     "TrendingTVShows": "Trending TV Shows",
     "TrendingMovies": "Trending Movies"
-  }
+  },
+  "Search": "Search"
 }
