--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -4,5 +4,6 @@
     "Trending": "Tendance",
     "TrendingTVShows": "Séries Tendance",
     "TrendingMovies": "Films Tendance"
-  }
+  },
+  "Search": "Recherche"
 }
